<resources>
    <string name="app_name">河长制APP</string>

    <string name="home">首页菜单</string>
    <string name="filter">筛选</string>
    <string name="tab_function">首页</string>
    <string name="tab_news_center">分类</string>
    <string name="tab_smart_service">管理</string>
    <string name="tab_gov_affairs">指南</string>
    <string name="tab_setting">设置</string>
    <string name="no_internet">世界上最遥远的距离就是没网，点击设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_notic">服务器验证失败，请重新登陆！</string>

    <string-array name="permissions">
        <item>@string/permission_recode_audio_hint</item>
        <item>@string/permission_get_accounts_hint</item>
        <item>@string/permission_read_phone_hint</item>
        <item>@string/permission_calenar_hint</item>
        <item>@string/permission_camera_hint</item>
        <item>@string/permission_access_fine_location_hint</item>
        <!--<item>@string/permission_access_coarse_location_hint</item>-->
        <item>@string/permission_body_sensors</item>
        <item>@string/permission_read_external_hint</item>
        <!--<item>@string/permission_white_external_hint</item>-->
        <item>@string/permission_read_sms</item>
    </string-array>

    <string name="permission_get_accounts_hint">没有通讯录权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有读取电话权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_calenar_hint">没有日历权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有照相机权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有GPS定位权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <!--<string name="permission_access_coarse_location_hint">没有网络定位权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>-->
    <string name="permission_body_sensors">没有传感器权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有读取外置卡权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <!--<string name="permission_white_external_hint">没有写外置卡权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>-->
    <string name="permission_read_sms">没有短信权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有麦克风权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>

    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

    <!-- 登陆 -->
    <string name="username">用户名：</string>
    <string name="password">密&#12288;码：</string>
    <string name="login">登&#12288;录</string>
    <string name="username_hini">请输入用户名</string>
    <string name="password_hini">请输入密码</string>

</resources>
