<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <include layout="@layout/activity_title_toolbar"></include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/layout_260"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:background="@drawable/denglukuang_bg" >

        <TextView
            android:id="@+id/tv_username"
            style="@style/text_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/username" />

        <com.roch.hzz_baidumap_demo.view.ClearEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_toRightOf="@+id/tv_username"
            android:background="@null"
            android:hint="@string/username_hini"
            android:textColorHint="@color/login_hint"
            android:textSize="@dimen/textSize_15" >
        </com.roch.hzz_baidumap_demo.view.ClearEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/layout_260"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_15"
        android:background="@drawable/denglukuang_bg" >

        <TextView
            android:id="@+id/password"
            style="@style/text_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/password" />

        <com.roch.hzz_baidumap_demo.view.ClearEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_toRightOf="@+id/password"
            android:background="@null"
            android:hint="@string/password_hini"
            android:textColorHint="@color/login_hint"
            android:inputType="textPassword"
            android:textSize="@dimen/textSize_15" >
        </com.roch.hzz_baidumap_demo.view.ClearEditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/layout_260"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="visible" >

        <CheckBox 
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:textSize="@dimen/textSize_16"
            android:textColor="@color/white"
            android:text="记住用户名和密码"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/layout_260"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_30"
        android:layout_marginRight="@dimen/padding_30"
        android:layout_marginTop="@dimen/margin_40"
        android:background="@drawable/button_login_selector"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize_15" />
</LinearLayout>